objects/Documentation__c.object
<CustomObject>
    <label>Documentation</label>
    <nameField>
        <displayFormat>Doc -{00}</displayFormat>
        <label>Documentation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Documentations</relationshipLabel>
        <relationshipName>Documentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Dummy__c</fullName>
        <label>Country Dummy</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procurement_Country__c</fullName>
        <label>Procurement Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Person_Email__c</fullName>
        <formula>Order__r.Supplier_COntact_Person_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Person Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Contact Person</label>
        <referenceTo>Supplier_Contact_Person__c</referenceTo>
        <relationshipLabel>Documentations</relationshipLabel>
        <relationshipName>Documentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Wise_Purchase_Confirmation__c</fullName>
        <formula>BLANKVALUE(TEXT(Order__r.Country_Wise_Purchase_Confirmation__c ),&apos;Not Available&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Wise Purchase Confirmation</label>
        <type>Text</type>
    </fields>
</CustomObject>